GET sessions now also returns sessionid
