# api/swagger.yml
@@ -50,7 +50,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Session"            
+              $ref: "#/components/schemas/AddSession"            
       responses:
         '200':
           description: Creation was successful.
@@ -153,6 +153,17 @@ components:
         sessioncount:
           type: "integer"
     Session:
+      type: "object"
+      properties:
+        sessionid:
+          type: "integer"
+        start:
+          type: "string"
+        length:
+          type: "integer"
+        quality:
+          type: "integer"
+    AddSession:
       type: "object"
       properties:
         start:
